--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,57 @@
 name: CI
-
 on:
-  push:
   pull_request:
+  push:
+    branches: [ main ]
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   smoke:
+    name: Import & tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-      - name: Install deps (best-effort)
+
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt || true; fi
-      - name: Lint (flake8 if present)
-        run: |
-          if [ -f setup.cfg ]; then pip install flake8 && flake8 || true; else echo "no flake8"; fi
-      - name: Smoke import
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
+
+      - name: Import smoke (main/app)
         run: |
           python - <<'PY'
-          import importlib
-          import sys
-          for m in ("app.main",):
+          import importlib, sys
+          failed = []
+          for m in ("main","app"):
               try:
                   importlib.import_module(m)
-                  print("OK:", m)
+                  print(f"[OK] import {m}")
               except Exception as e:
-                  print("WARN:", m, e, file=sys.stderr)
+                  failed.append((m, e))
+                  print(f"[FAIL] {m} -> {e}")
+          if failed:
+              sys.exit(1)
+          print("ci: smoke ok")
           PY
+
+      - name: Run pytest (if tests/ exists)
+        run: |
+          if [ -d tests ]; then
+            python -m pytest -q
+          else
+            echo "No tests/ dir; skipping."
+          fi
