--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,57 @@
-name: ✅ CI Checks
-
+name: CI
 on:
-  push:
-    branches: [main]
   pull_request:
-    branches: [main]
+  push:
+    branches: [ main ]
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  lint-test:
+  smoke:
+    name: Import & tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: '3.12'
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
-          pip install -r requirements.txt || true
-          pip install flake8 pytest
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
 
-      - name: Lint check
-        run: flake8 . --exclude=.venv --max-line-length=120
+      - name: Import smoke (main/app)
+        run: |
+          python - <<'PY'
+          import importlib, sys
+          failed = []
+          for m in ("main","app"):
+              try:
+                  importlib.import_module(m)
+                  print(f"[OK] import {m}")
+              except Exception as e:
+                  failed.append((m, e))
+                  print(f"[FAIL] {m} -> {e}")
+          if failed:
+              sys.exit(1)
+          print("ci: smoke ok")
+          PY
 
-      - name: Run tests
-        run: pytest -q || echo "⚠️ Tests failed (non-blocking)"
+      - name: Run pytest (if tests/ exists)
+        run: |
+          if [ -d tests ]; then
+            python -m pytest -q
+          else
+            echo "No tests/ dir; skipping."
+          fi
