--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,13 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-test:
     runs-on: ubuntu-latest
@@ -16,15 +23,23 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt || true
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
           pip install flake8 pytest
 
       - name: Lint check
         run: flake8 . --exclude=.venv --max-line-length=120
 
-      - name: Run tests
-        run: pytest -q || echo "⚠️ Tests failed (non-blocking)"
+      - name: Run tests (fail only on failing suite)
+        run: |
+          if [ -d tests ]; then
+            pytest -q
+          else
+            echo 'No tests/ directory; skipping.'
+          fi
